service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: python-demo-app-service
  namespace: python-demo-app
spec:    
  ports:
  - port: 5000
    targetPort: 5000
  selector: 
    app: python-demo-app
  type: LoadBalancer
