ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-demo-app-web
  namespace: python-demo-app
spec:
  rules:
    - host: python-app.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-demo-app-web
                port: 
                  number: 80
